--- a/ Docker/hello-image/docker-compose.yml
+++ b/ Docker/hello-image/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    # depends_on:
-    #   - db
+    depends_on:
+      - db
     ports:
       - "8080:8080"
     environment:
